# electrust

./: .gitignore  .webpack.config.js  README.old.md  configuration.json  package-lock.json  package.json  tsconfig.json
main/: Startup.ts
renderer/: App.tsx
server/: Cargo.toml
server/src/: main.rs
server/src/infrastructure/: configuration.rs
static/: index.html
