[package]
name = "server"
version = "0.1.0"
authors = ["qdimka <qdimka1991@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
log = "0.4"
futures-util = { version = "0.3.5", default-features = false, features = ["async-await", "sink", "std"] }
pin-project = "0.4"
tokio = { version = "0.2", default-features = false, features = ["full"] }
futures-channel="*"
tungstenite="*"